# test-graphRAG

./: .env.example  .gitignore  =2.4.0  MILVUS_DOCKER_SETUP.md  MILVUS_MIGRATION_STATUS.md  README.md  _count_chars.py  _debug_milvus.py  _diagnose.py  _generate_embeddings.py  _test_milvus_client.py  docker-compose - 副本.yml  docker-compose.yml  plan.md  project.json  pyproject.toml  requirements.txt  settings.yaml
config/: default.yaml  fast.yaml  production.yaml
docs/RAG/: README.md  (+21 more)
docs/RAG-1/: README.md  chapter-01-intro.md  chapter-03-scenarios.md  chapter-04-risks.md  chapter-05-multi-recall.md  chapter-06-knowledge-base.md  chapter-07-knowledge-mgmt.md  chapter-08-knowledge-graph.md  chapter-09-doc-struct.md  chapter-10-advanced.md  chapter-11-engineering.md  chapter-12-evaluation.md  chapter-13-integration.md
docs/RAG-2/: ch04-document-processing.md  ch05-vector-storage.md  ch06-knowledge-base.md  ch07-multi-recall.md  ch08-advanced-indexing.md  ch09-kg-retrieval.md  ch10-graphrag-deepseek.md  ch11-hybrid-search.md  ch12-agentic-rag.md  ch13-kg-construction.md  ch14-performance.md  ch15-evaluation.md  ch16-troubleshooting.md  ch17-collaboration.md  ch18-end-to-end-rag.md  ch19-customer-service.md  ch20-internal-km.md  ch21-bi-automation.md  ch22-graphrag-integration.md  chapter-01-intro.md  chapter-02-principles.md  chapter-03-scenarios.md
documents/: architecture.md  data-flow.md  technology-principles.md
examples/: basic_workflow.py
java/: .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
my-project02/: docker-compose.yml  project.json  settings.yaml
prometheus/: granfana_dashboard_17038_rev1.json  prometheus.yml
src/: evaluate.md
tests/: conftest.py  test_milvus_integration.py
(+227 files in other folders)
